# LAN-MajSoul

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  client.cpp  server.cpp
include/: generator.hpp  logger.hpp  majiong.cpp  network.hpp  network_base.hpp  network_linux.hpp  network_windows.hpp  rules.hpp
source/: generator.cpp  logger.cpp  network.cpp  network_base.cpp  network_linux.cpp  network_windows.cpp  rules.cpp
